# transform_images

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_PLAN.md  LIBRAW_MACOS_FIX.md  README.md  SVELTE_MIGRATION.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: README.md  build-release.yml
docs/: WINDOWS_SETUP.md
scripts/: setup-windows-libs.ps1  test-workflow.sh
src/: app.css  app.html  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: commands.rs  dto.rs  mod.rs  state.rs  task_manager.rs
src-tauri/src/domain/: error.rs  mod.rs
src-tauri/src/domain/models/: image.rs  mod.rs  settings.rs  transformation.rs
src-tauri/src/domain/services/: image_processor.rs  mod.rs
src-tauri/src/domain/value_objects/: dimensions.rs  image_format.rs  mod.rs  quality.rs
src-tauri/src/infrastructure/: error.rs  metadata_cleaner.rs  mod.rs
src-tauri/src/infrastructure/file_system/: mod.rs
src-tauri/src/infrastructure/image_processor/: batch_processor.rs  mod.rs  processor_impl.rs  raw_processor.rs
src-tauri/src/infrastructure/image_processor/optimizers/: jpeg_optimizer.rs  mod.rs  png_optimizer.rs  webp_optimizer.rs
src-tauri/src/infrastructure/image_processor/transformers/: mod.rs  resizer.rs  rotator.rs
src-tauri/test/: integration_test.rs
src-tauri/tests/: integration_test.rs  metadata_cleaner_test.rs  raw_transformation_test.rs
src/app/services/: ImageService.ts
src/app/state/: AppState.ts
src/lib/app/services/: ImageService.ts
src/lib/app/state/: AppState.ts
src/lib/components/: MainContent.svelte  Sidebar.svelte
src/lib/components/header/: ActionButtons.svelte  Header.svelte  Logo.svelte
src/lib/components/main/: DropZone.svelte  ImageCard.svelte  ImageGrid.svelte  ProgressBar.svelte  ResultCard.svelte  ResultsPanel.svelte
src/lib/components/sidebar/: FormatSelector.svelte  MetadataOptions.svelte  OutputDirectoryPicker.svelte  QualitySlider.svelte  RawQualitySelector.svelte  TransformationsPanel.svelte
src/lib/models/: types.ts
src/lib/services/: ImageService.ts
src/lib/state/: AppState.ts
src/models/: types.ts
src/routes/: +page.svelte
wp-content/database/: .ht.sqlite
wp-content/themes/twentytwentyfive/: functions.php
