 [package]
  name = "transform-images"
  version = "0.1.0"
  description = "Professional image transformation and optimization tool"
  authors = ["laruina"]
  edition = "2021"
  rust-version = "1.70"

  [lib]
  name = "transform_images_lib"
  crate-type = ["staticlib", "cdylib", "rlib"]

  [build-dependencies]
  tauri-build = { version = "2", features = [] }

  [dependencies]
  # Tauri Core
  tauri = { version = "2", features = [] }
  tauri-plugin-opener = "2"
  tauri-plugin-dialog = "2"

  # Serialization
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"

  # Image Processing
  image = { version = '0.25', default-features = false, features = ['png', 'jpeg'] }
  oxipng = { version = "9.1", default-features = false }

  # Async Runtime
  tokio = { version = "1.40", features = ["full"] }

  # Parallelism
  rayon = "1.10"

  # Error Handling
  thiserror = "1.0"
  anyhow = "1.0"

  # File System
  walkdir = "2.5"

  # Atomic Operations
  parking_lot = "0.12"

  [dev-dependencies]
  mockall = "0.13"
  tempfile = "3.12"
  # criterion = "0.5"  # Comentado por ahora, lo usaremos en fases posteriores

  # [[bench]]
  # name = "image_processing"
  # harness = false
  # Benchmarks se agregarán en fases posteriores para medir performance